--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.5",
+    "@astrojs/preact": "^3.5.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.14.6",
-    "less-loader": "^12.2.0"
+    "less-loader": "^12.2.0",
+    "preact": "^10.23.2"
   }
 }
