--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "astro": "^4.14.6",
     "less-loader": "^12.2.0",
     "preact": "^10.23.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
