--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,29 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ceeafa",
-    "activityBar.background": "#ceeafa",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#f06ec1",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#ceeafa",
-    "sideBar.border": "#ceeafa",
-    "statusBar.background": "#9fd7f6",
-    "statusBar.border": "#9fd7f6",
-    "statusBar.debuggingBackground": "#f6be9f",
-    "statusBar.debuggingBorder": "#f6be9f",
-    "statusBar.debuggingForeground": "#15202b",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#70c4f2",
-    "statusBarItem.remoteBackground": "#9fd7f6",
-    "statusBarItem.remoteForeground": "#15202b",
-    "tab.activeBorder": "#ceeafa",
-    "titleBar.activeBackground": "#9fd7f6",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.border": "#9fd7f6",
-    "titleBar.inactiveBackground": "#9fd7f699",
-    "titleBar.inactiveForeground": "#15202b99"
+    "activityBar.activeBackground": "#494184",
+    "activityBar.background": "#494184",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#150c0b",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#494184",
+    "sideBar.border": "#494184",
+    "statusBar.background": "#363062",
+    "statusBar.border": "#363062",
+    "statusBar.debuggingBackground": "#5c6230",
+    "statusBar.debuggingBorder": "#5c6230",
+    "statusBar.debuggingForeground": "#e7e7e7",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#494184",
+    "statusBarItem.remoteBackground": "#363062",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "tab.activeBorder": "#494184",
+    "titleBar.activeBackground": "#363062",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.border": "#363062",
+    "titleBar.inactiveBackground": "#36306299",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#9fd7f6"
+  "peacock.color": "#363062"
 }
