--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.14.6",
+    "astro-expressive-code": "^0.36.1",
     "less-loader": "^12.2.0",
     "mdast-util-to-string": "^4.0.0",
     "preact": "^10.23.2",
