--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/preact": "^3.5.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@expressive-code/plugin-line-numbers": "^0.36.1",
     "astro": "^4.14.6",
     "astro-expressive-code": "^0.36.1",
     "less-loader": "^12.2.0",
